@@ -25,8 +25,9 @@ ubiquity (2.9.20) UNRELEASED; urgency=low
 
   [ Stéphane Graber ]
   * Use the Xubuntu wallpaper when available. (LP: #936572)
+  * Detect bogus DNS servers and ignore them. (LP: #760884)
 
- -- Stéphane Graber <stgraber@ubuntu.com>  Sun, 19 Feb 2012 18:16:37 -0500
+ -- Stéphane Graber <stgraber@ubuntu.com>  Tue, 21 Feb 2012 21:04:51 -0500
 
 ubiquity (2.9.19) precise; urgency=low
 
